--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ header {
     color: rgb(42, 122, 228);
 }
 
-section {
+.chamada {
     background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
@@ -41,3 +41,4 @@ img {
    overflow-x: auto;
    gap: 20px;
 }
+
