--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,6 @@ p {
    font-size: 20px;
 }
 
-img {
-   height: 200px;
-}
-
 .categoria-videos {
    display: flex;
    overflow-x: auto;
@@ -45,4 +41,13 @@ img {
 .categoria {
    padding-left: 20px;
    padding-right: 20px;
+}
+
+.categoria-videos img {
+   opacity: 0.5;
+   height: 200px;
+}
+
+.categoria-videos img:hover {
+   opacity: 1.0;
 }
